--- a/ci/configure-uaa.yml
+++ b/ci/configure-uaa.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: rwwilden/cf_tools
+    repository: ruurdk/cf_tools
 
 inputs:
 - name: resource-git-smoketests
