params and insecure

--- a/ci/scale.yml
+++ b/ci/scale.yml
@@ -12,3 +12,11 @@ inputs:
 
 run:
   path: resource-git-smoketests/ci/scale.sh
+
+params:
+  api:
+  insecure:
+  organization:
+  space:
+  username:
+  password:
