--- a/ci/configure-uaa.yml
+++ b/ci/configure-uaa.yml
@@ -4,7 +4,10 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: ruurdk/cf_tools
+    repository: harbor.sandbox.haas.politie:443/platform-team/cf_tools
+    tag: latest
+    insecure_registries:
+    - harbor.sandbox.haas.politie:443
 
 inputs:
 - name: resource-git-smoketests
