--- a/ci/tests.yml
+++ b/ci/tests.yml
@@ -14,6 +14,9 @@ image_resource:
 inputs:
 - name: resource-git-smoketests
 
+params:
+- CHECK_URL:
+
 run:
   path: resource-git-smoketests/ci/tests.sh
 #  args: [ "https://smoketests.<appdomain>/v1/status" ]
