--- a/manifest-sandbox.yml
+++ b/manifest-sandbox.yml
@@ -1,16 +1,24 @@
 applications:
 - name: smoketests
   instances: 1
+  routes:
+  - route: smoketests.apps.sandbox.haas.politie 
   memory: 32M
   disk_quota: 32M
   buildpacks: 
   - go_buildpack
   env:
     GOPACKAGENAME: smoketests
-    DASHBOARD_DATA_ENDPOINT: https://smoketestsdashboard.apps.sandbox.haas.politie/api/smokestate
+    GOVERSION: go1.17
+    DASHBOARD_DATA_ENDPOINT: https://smoketestsdashboard.apps.ota.haas.politie/api/smokestate
     ADFS_RES_URL: http://smoketests-sso-resource/adfsLogin
     UAA_RES_URL: http://smoketests-sso-resource/uaaLogin
+    TYPE: OTA 
+    SITE: Hoofdstraat 
   services:
   - smoketests-db
   - smoketests-rabbitmq
   - smoketests-redis
+  - autoscaler
+  - smoketests-smoketests-on-rabbitmq
+  stack: cflinuxfs3
