--- a/manifest-sandbox.yml
+++ b/manifest-sandbox.yml
@@ -14,6 +14,7 @@ applications:
     ADFS_RES_URL: http://smoketests-sso-resource/adfsLogin
     UAA_RES_URL: http://smoketests-sso-resource/uaaLogin
     TYPE: SandBox
+    Site: Driebergen
   services:
   - smoketests-db
   - smoketests-rabbitmq
