--- a/manifest-prod.yml
+++ b/manifest-prod.yml
@@ -17,6 +17,7 @@ applications:
     SITE: Driebergen
   services:
   - smoketests-db
+  - smoketests-rabbitmq
   - smoketests-redis
   - autoscaler
   stack: cflinuxfs3
