--- a/manifest-prod.yml
+++ b/manifest-prod.yml
@@ -14,6 +14,7 @@ applications:
     ADFS_RES_URL: http://smoketests-sso-resource/adfsLogin
     UAA_RES_URL: http://smoketests-sso-resource/uaaLogin
     TYPE: Productie
+    SITE: PUPX
   services:
   - smoketests-db
   - smoketests-rabbitmq
