--- a/manifest-prod.yml
+++ b/manifest-prod.yml
@@ -13,8 +13,8 @@ applications:
     DASHBOARD_DATA_ENDPOINT: https://smoketestsdashboard.apps.prod.haas.politie/api/smokestate
     ADFS_RES_URL: http://smoketests-sso-resource/adfsLogin
     UAA_RES_URL: http://smoketests-sso-resource/uaaLogin
-    TYPE: HaaS Productie
-    SITE: Platform
+    TYPE: Productie
+    SITE: HaaS Platform
   services:
   - smoketests-db
   - smoketests-rabbitmq
