--- a/manifest-sandbox.yml
+++ b/manifest-sandbox.yml
@@ -15,6 +15,7 @@ applications:
     UAA_RES_URL: http://smoketests-sso-resource/uaaLogin
     TYPE: SandBox
     SITE: HaaS Platform
+    SMB_FILE: smoketestfile
   services:
   - smoketests-db
   - smoketests-rabbitmq
