--- a/ci/clean-up.yml
+++ b/ci/clean-up.yml
@@ -14,3 +14,10 @@ inputs:
 
 run:
    path: resource-git-smoketests/ci/clean-up.sh
+
+params:
+  api:
+  space:
+  organization:
+  username:
+  password:
