--- a/ci/tests.yml
+++ b/ci/tests.yml
@@ -6,10 +6,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: harbor.sandbox.haas.politie:443/platform-team/cf_tools
+    repository: harbor.cp.haas.politie:443/library/pcf_ops
     tag: latest
-    insecure_registries:
-    - harbor.sandbox.haas.politie:443
 
 inputs:
 - name: resource-git-smoketests
