--- a/ci/tests.yml
+++ b/ci/tests.yml
@@ -6,7 +6,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: harbor.cp.haas.politie:443/library/pcf_ops
+    repository: harbor.cp.haas.politie:443/library/pcf-ops
     tag: latest
 
 inputs:
