--- a/ci/deploy.yml
+++ b/ci/deploy.yml
@@ -4,10 +4,10 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: harbor.sandbox.haas.politie:443/platform-team/cf-uaa
+    repository: harbor.cp.haas.politie:443/library/cf-uaa
     tag: latest
     insecure_registries:
-    - harbor.sandbox.haas.politie:443
+    - harbor.cp.haas.politie:443
 
 inputs:
 - name: resource-git-smoketests
