--- a/manifest.yml
+++ b/manifest.yml
@@ -10,9 +10,10 @@ applications:
   env:
     GOPACKAGENAME: smoketests
     DASHBOARD_DATA_ENDPOINT: http://((dashboard-fqdn))/api/smokestate
-    ADFS_RES_URL: http://((sso-resource-fqdn))/adfsLogin
-    UAA_RES_URL: http://((sso-resource-fqdn))/uaaLogin
+    ADFS_RES_URL: ((adfs-resource-url)) #http://((sso-resource-fqdn))/adfsLogin
+    UAA_RES_URL: ((uaa-resource-url)) #http://((sso-resource-fqdn))/uaaLogin
     TYPE: ((type))
     SITE: ((site))
     SMB_FILE: ((smb-file))
+    KUBECONFIG_PATH: ((kubeconfig-path))
   services: ((services))
