--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,7 @@
 applications:
 - name: smoketests
-  instances: 1
   routes:
   - route: ((route))
-  memory: 32M
-  disk_quota: 32M
   buildpacks: 
   - go_buildpack
   env:
@@ -16,4 +13,10 @@ applications:
     SITE: ((site))
     SMB_FILE: ((smb-file))
     KUBECONFIG_PATH: ((kubeconfig-path))
-  services: ((services))
+  processes:
+  - type: web
+    instances: 1
+    memory: 32M
+    disk_quota: 512M
+    health-check-type: port
+  services:
